--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,16 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+flake8 = "*"
+mypy = "*"
+black = "*"
 
 [packages]
+django = "*"
+django-environ = "*"
 
 [requires]
 python_version = "3.8"
+
+[pipenv]
+allow_prereleases = true
